# rxn-ca

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
cli/: index.html
docs/: cli.md  getting-started.md  index.md
docs/guides/: basic-usage.md  jobflow.md
getting-started/: index.html
guides/: jobflow.ipynb
guides/basic-usage/: index.html
guides/jobflow/: index.html
search/: search_index.json
src/rxn_ca/: cli.py
src/rxn_ca/analysis/: bulk_reaction_analyzer.py
src/rxn_ca/analysis/visualization/: reaction_plotter.py
src/rxn_ca/computing/: jobs.py
src/rxn_ca/computing/schemas/: base_schema.py  ca_result_schema.py  multi_ca_result_schema.py
src/rxn_ca/core/: liquid_swap_controller.py  reaction_controller.py  reaction_result.py
src/rxn_ca/optimization/: __init__.py  base.py  objective.py  optimizable_recipe.py  plotting.py  precursor_selection.py  search_space.py  synthesis_data.py  thermodynamic_scoring.py  utilities.py
src/rxn_ca/optimization/bayesian/: __init__.py  optimizer.py
src/rxn_ca/optimization/genetic/: __init__.py  optimizer.py
src/rxn_ca/phases/: solid_phase_set.py
src/rxn_ca/reactions/: reaction_library.py  scorers.py
src/rxn_ca/utilities/: analysis.py  bayesian_helpers.py  get_entries.py  get_scored_rxns.py  heating_schedule_runner.py  parallel_sim.py  single_sim.py  viz.py
src/rxn_ca/workflow/: __init__.py  bayesian_flow_makers.py  flows.py  jobs.py  schemas.py
src/rxn_ca/workflow/flows/:    __init__.py  bayesian.py  core.py
src/rxn_ca/workflow/jobs/: __init__.py  bayesian.py  core.py
tests/optimization/: test_base.py  test_objective.py  test_optimizable_recipe.py  test_optimizers.py  test_precursor_selection.py  test_search_space.py
tests/reactions/: test_reaction_library_caching.py
tests/utilities/: test_get_entries.py
tests/workflow/: test_schemas.py
